objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__QuoteProcessId__c</fullName>
        <description>ID of the quote process to use with this quote. This field is meant to be populated by a workflow rule.</description>
        <inlineHelpText>Guided selling process ID to use with this quote, if any.</inlineHelpText>
        <label>Quote Process Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplateId__c</fullName>
        <description>ID of quote template that must be used when generating documents from this quote.</description>
        <inlineHelpText>Stores a quote template ID if one is specified to use when generating quote PDF documents.</inlineHelpText>
        <label>Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularAmount__c</fullName>
        <description>Roll up of regular amounts of quote products.</description>
        <inlineHelpText>Total amount of non-optional line times before additional discounts are applied.</inlineHelpText>
        <label>Regular Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__RegularTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales rep responsible for this quote if different from the user who owns the Quote record.</description>
        <inlineHelpText>Sales rep responsible for this quote if different from the user who owns the Quote record.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCity__c</fullName>
        <description>City on the Ship To address for this quote.</description>
        <inlineHelpText>City on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCountry__c</fullName>
        <description>Country on the Ship To address for this quote.</description>
        <inlineHelpText>Country on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingName__c</fullName>
        <description>Name on the Ship To address for this quote.</description>
        <inlineHelpText>Name on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingPostalCode__c</fullName>
        <description>Postal Code on the Ship To address for this quote.</description>
        <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingState__c</fullName>
        <description>State/Province on the Ship To address for this quote.</description>
        <inlineHelpText>State/Province on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingStreet__c</fullName>
        <description>Street on the Ship To address for this quote.</description>
        <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote.</description>
        <inlineHelpText>If cloned, this references the original quote cloned.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quotes (Source)</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this quote.</description>
        <inlineHelpText>Start date for subscriptions in this quote.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>Status indicating where quote is in its lifecycle.</description>
        <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</description>
        <inlineHelpText>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetCustomerAmount__c</fullName>
        <description>Customer amount to be targeted in calculating additional discounts.</description>
        <inlineHelpText>Enter desired customer amount to automatically calculate additional discount on discountable line items.</inlineHelpText>
        <label>Target Customer Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalCustomerDiscountAmount__c</fullName>
        <description>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</description>
        <formula>SBQQ__ListAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</inlineHelpText>
        <label>Total Customer Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of quote</description>
        <inlineHelpText>Type of quote</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quote</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To display watermark in the Quote Document if it&apos;s checked.</description>
        <inlineHelpText>To display watermark in the Quote Document if it&apos;s checked.</inlineHelpText>
        <label>Watermark Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Role__c</fullName>
        <formula>SBQQ__SalesRep__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Description__c</fullName>
        <defaultValue>&quot;Add 1 - 3 sentences describing services at a high level. ex: Model building support for FP&amp;A, project scoping workshop, etc.&quot;</defaultValue>
        <description>Custom Field Used for Sales Rep to enter services description which will be displayed on the quote output</description>
        <inlineHelpText>Services Description used in quote output</inlineHelpText>
        <label>Services Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_End_Date_Long_Format__c</fullName>
        <formula>IF (ISNULL( Services_End_Date__c),&quot;&quot;, 
IF(MONTH( Services_End_Date__c )=1, &quot;Jan&quot;, 
IF(MONTH( Services_End_Date__c )=2, &quot;Feb&quot;, 
IF(MONTH( Services_End_Date__c )=3, &quot;Mar&quot;, 
IF(MONTH( Services_End_Date__c )=4, &quot;Apr&quot;, 
IF(MONTH( Services_End_Date__c )=5, &quot;May&quot;, 
IF(MONTH( Services_End_Date__c)=6, &quot;Jun&quot;, 
IF(MONTH( Services_End_Date__c)=7, &quot;Jul&quot;, 
IF(MONTH( Services_End_Date__c )=8, &quot;Aug&quot;, 
IF(MONTH( Services_End_Date__c )=9, &quot;Sep&quot;, 
IF(MONTH( Services_End_Date__c)=10, &quot;Oct&quot;, 
IF(MONTH( Services_End_Date__c )=11, &quot;Nov&quot;, 
IF(MONTH(Services_End_Date__c )=12, &quot;Dec&quot;, &quot;MMM&quot;)))))))))))) 
&amp; &quot; &quot; &amp; TEXT(DAY( Services_End_Date__c )) 
&amp; &quot;, &quot; &amp; TEXT(YEAR ( Services_End_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services End Date (Long Format)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_End_Date__c</fullName>
        <label>Services End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Start_Date_Long_Format__c</fullName>
        <formula>IF (ISNULL( Services_Start_Date__c),&quot;&quot;, 
IF(MONTH( Services_Start_Date__c )=1, &quot;Jan&quot;, 
IF(MONTH( Services_Start_Date__c )=2, &quot;Feb&quot;, 
IF(MONTH( Services_Start_Date__c )=3, &quot;Mar&quot;, 
IF(MONTH( Services_Start_Date__c )=4, &quot;Apr&quot;, 
IF(MONTH( Services_Start_Date__c )=5, &quot;May&quot;, 
IF(MONTH( Services_Start_Date__c)=6, &quot;Jun&quot;, 
IF(MONTH( Services_Start_Date__c)=7, &quot;Jul&quot;, 
IF(MONTH( Services_Start_Date__c )=8, &quot;Aug&quot;, 
IF(MONTH( Services_Start_Date__c )=9, &quot;Sep&quot;, 
IF(MONTH( Services_Start_Date__c)=10, &quot;Oct&quot;, 
IF(MONTH( Services_Start_Date__c )=11, &quot;Nov&quot;, 
IF(MONTH(Services_Start_Date__c )=12, &quot;Dec&quot;, &quot;MMM&quot;)))))))))))) 
&amp; &quot; &quot; &amp; TEXT(DAY( Services_Start_Date__c )) 
&amp; &quot;, &quot; &amp; TEXT(YEAR ( Services_Start_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Start Date (Long Format)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Start_Date__c</fullName>
        <label>Services Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Long_Format__c</fullName>
        <formula>IF (ISNULL( SBQQ__StartDate__c),&quot;&quot;, 
IF(MONTH( SBQQ__StartDate__c )=1, &quot;Jan&quot;, 
IF(MONTH( SBQQ__StartDate__c )=2, &quot;Feb&quot;, 
IF(MONTH( SBQQ__StartDate__c )=3, &quot;Mar&quot;, 
IF(MONTH( SBQQ__StartDate__c )=4, &quot;Apr&quot;, 
IF(MONTH( SBQQ__StartDate__c )=5, &quot;May&quot;, 
IF(MONTH( SBQQ__StartDate__c)=6, &quot;Jun&quot;, 
IF(MONTH( SBQQ__StartDate__c)=7, &quot;Jul&quot;, 
IF(MONTH( SBQQ__StartDate__c )=8, &quot;Aug&quot;, 
IF(MONTH( SBQQ__StartDate__c )=9, &quot;Sep&quot;, 
IF(MONTH( SBQQ__StartDate__c)=10, &quot;Oct&quot;, 
IF(MONTH( SBQQ__StartDate__c )=11, &quot;Nov&quot;, 
IF(MONTH(SBQQ__StartDate__c )=12, &quot;Dec&quot;, &quot;MMM&quot;)))))))))))) 
&amp; &quot; &quot; &amp; TEXT(DAY( SBQQ__StartDate__c )) 
&amp; &quot;, &quot; &amp; TEXT(YEAR ( SBQQ__StartDate__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date (Long Format)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Display__c</fullName>
        <formula>IF (  MOD( SBQQ__SubscriptionTerm__c , 12) = 0, 
IF ( SBQQ__SubscriptionTerm__c &lt; 24,  &apos; 1 Year&apos;, TEXT(SBQQ__SubscriptionTerm__c /12 ) + &apos; Year(s)&apos;),
TEXT(SBQQ__SubscriptionTerm__c) + &apos; Months&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Todays_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Amount__c</fullName>
        <formula>Net_Subscription_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Fee__c</fullName>
        <formula>IF (  ISBLANK(TEXT(Opt_Out_Period__c)),  SBQQ__NetAmount__c , SBQQ__NetAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Subscription Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Invoice_Amount__c</fullName>
        <formula>CASE( TEXT( Product_Billing_Terms__c ), 
&quot;Annual&quot;, 1 * 
IF ( X1st_Yr_ACV__c &gt; 0 , X1st_Year_Subscription__c, 
X1st_Year_Subscription_Standard__c ) , 
&quot;Quarterly&quot;, 0.25 * 
IF ( X1st_Yr_ACV__c &gt; 0 , X1st_Year_Subscription__c, 
X1st_Year_Subscription_Standard__c ) ,
&quot;Custom&quot;,  Custom_Invoice_Amount__c ,
IF ( X1st_Yr_ACV__c &gt; 0 , X1st_Year_Subscription__c, 
X1st_Year_Subscription_Standard__c ))</formula>
        <label>Total Subscription Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Case_Description__c</fullName>
        <inlineHelpText>If platform = n/a, the use case description is required.</inlineHelpText>
        <label>Use Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <picklist>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPM Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory and Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions Crediting &amp; Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning Budgeting Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workspace_Qty__c</fullName>
        <label>Workspace Qty (GB)</label>
        <summarizedField>SBQQ__QuoteLine__c.Additional_Capacity_GB__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>contains</operation>
            <value>Workspace</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_Year_Subscription_Standard__c</fullName>
        <formula>IF (  Has_Standard_Pricing__c , Total_Subscription_Amount__c / (   Calculated_Subscription_Term__c / 12  ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Year Subscription - Standard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_Subscription__c</fullName>
        <label>1st Year Subscription - Phased</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_Subscription_Total__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Subscription__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_Yr_ACV__c</fullName>
        <label>1st Yr ACV</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_Unit_Price_ACV_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_yr_ACV_50_Last_Yr_ACV__c</fullName>
        <formula>/*IF ( X1st_Yr_ACV__c &lt; 0.50 *  Last_Year_ACV__c, &apos;Yes&apos;, &apos;No&apos;)*/

IF ( X1st_Yr_ACV__c &lt;&gt; 0, ((Last_Year_ACV__c - X1st_Yr_ACV__c) /  X1st_Yr_ACV__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st yr ACV &lt; 40% Last Yr ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Yr_ACV__c</fullName>
        <label>2nd Yr ACV</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_Unit_Price_ACV_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X3rd_Yr_ACV__c</fullName>
        <label>3rd Yr ACV</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_Unit_Price_ACV_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X4th_Yr_ACV__c</fullName>
        <label>4th Yr ACV</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_Unit_Price_ACV_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
            <operation>equals</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Opportunity__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Primary__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>SBQQ__Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>Approved_Quote</fullName>
        <active>true</active>
        <description>Approved Quote Layout</description>
        <label>Approved Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Quote</fullName>
        <active>true</active>
        <label>Locked Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unlocked_Quote</fullName>
        <active>true</active>
        <label>Pre-Approved Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Business_Justification_Required</fullName>
        <active>true</active>
        <description>Business Justification is require for approval</description>
        <errorConditionFormula>IF (TEXT(  ApprovalStatus__c  ) = &apos;Pending&apos; &amp;&amp;
    ISBLANK ( Business_Justification__c  ), true, false)</errorConditionFormula>
        <errorDisplayField>Business_Justification__c</errorDisplayField>
        <errorMessage>Please enter a business justification before submitting for approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_use_case_before_del_QLs</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( Use_Case__c ) &amp;&amp; Quote_Lines_Count__c &gt; 0 , true , false )</errorConditionFormula>
        <errorDisplayField>Use_Case__c</errorDisplayField>
        <errorMessage>Please delete all quote lines before changing the Use Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_First_Segment_Term_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNULL(SBQQ__FirstSegmentTermEndDate__c)) &amp;&amp; NOT(ISNULL(SBQQ__StartDate__c)) &amp;&amp; (NOT(ISNULL(SBQQ__SubscriptionTerm__c)) || NOT(ISNULL(SBQQ__EndDate__c))) &amp;&amp;
(SBQQ__FirstSegmentTermEndDate__c &lt; SBQQ__StartDate__c || IF(NOT(ISNULL(SBQQ__EndDate__c)),SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__EndDate__c, IF(LOWER($Setup.SBQQ__GeneralSettings__c.SBQQ__SubscriptionTermUnit__c)=&apos;day&apos;, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + SBQQ__SubscriptionTerm__c-1, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + (SBQQ__SubscriptionTerm__c * 30.4375))))</errorConditionFormula>
        <errorDisplayField>SBQQ__FirstSegmentTermEndDate__c</errorDisplayField>
        <errorMessage>First Segment Term End Date must fall between Quote Start Date and Quote End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Term_or_End_Date</fullName>
        <active>true</active>
        <description>The user can enter in either the subscription term on the end date</description>
        <errorConditionFormula>AND ( NOT(ISBLANK( SBQQ__SubscriptionTerm__c )), 
NOT(ISBLANK(  SBQQ__EndDate__c  )))</errorConditionFormula>
        <errorMessage>You can enter in either the subscription term or the end date, but not both. Remove either the subscription term or the end date, and re-save the quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Use_Case_Description_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF (TEXT( Use_Case__c ) = &apos;Other&apos; &amp;&amp;  
ISBLANK(  Use_Case_Description__c ) , true, false)</errorConditionFormula>
        <errorDisplayField>Use_Case_Description__c</errorDisplayField>
        <errorMessage>Please enter a description for the use case</errorMessage>
    </validationRules>
</CustomObject>